--- a/sunnyside-agency-landing-page/package.json
+++ b/sunnyside-agency-landing-page/package.json
@@ -1,23 +1,15 @@
 {
-  "dependencies": {
-    "gsap": "^3.12.2",
-    "sass": "^1.66.1",
-    "typescript": "^5.2.2",
-    "vite": "^4.4.9"
-  },
   "name": "sunnyside-agency-landing-page",
-  "description": "![Design preview for the Sunnyside agency landing page coding challenge](./design/desktop-preview.jpg)",
   "version": "1.0.0",
+  "description": "Sunnyside Agency Landing Page",
+  "main": "app.js",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "typescript": "^5.0.2",
-    "vite": "^4.4.9"
+    "sass": "sass --no-source-map --watch ./src/index.scss ./src/index.css"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "MIT",
+  "devDependencies": {
+    "sass": "^1.72.0"
+  }
 }
