--- a/url-shortening-api-landing-page/package.json
+++ b/url-shortening-api-landing-page/package.json
@@ -1,7 +1,7 @@
 {
   "name": "url-shortening-api-landing-page",
   "version": "1.0.0",
-  "description": "![Design preview for the Shortly URL shortening API coding challenge](./design/desktop-preview.jpg)",
+  "description": "URL Shortening API Landing Page",
   "main": "index.js",
   "scripts": {
     "test": "sass && tsc --watch"
