Modified package.json and logo sites

--- a/sunnyside-agency-landing-page/package.json
+++ b/sunnyside-agency-landing-page/package.json
@@ -8,7 +8,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "MIT",
+  "license": "ISC",
   "devDependencies": {
     "sass": "^1.72.0"
   }
